Added some more elements/components

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,12 @@
 /* stonkpile.css v0.0.1
- * ================
+ * ====================
  * Minimal css framework
  * Project: https://github.com/stonkpile/css/
 */
 
 @import "variables";
-@import "base/reset";
-@import "base/document";
 
-@import "utils/index";
+@import "base/index";
+@import "elements/index";
+@import "components/index";
+@import "utilities/index";
