--- a/scss/elements/_icon.scss
+++ b/scss/elements/_icon.scss
@@ -1,3 +1,9 @@
+$iconSizes: (
+  'small': 1rem,
+  'medium': 2rem,
+  'large': 3rem
+);
+
 .icon {
   display: inline-flex;
   align-items: center;
@@ -5,18 +11,10 @@
   height: 1.5rem;
   width: 1.5rem;
 
-  &.is-small {
-    height: 1rem;
-    width: 1rem;
-  }
-
-  &.is-medium {
-    height: 2rem;
-    width: 2rem;
-  }
-
-  &.is-large {
-    height: 3rem;
-    width: 3rem;
+  @each $name, $size in $iconSizes {
+    &.is-#{$name} {
+      height: $size;
+      width: $size;
+    }
   }
 }
