--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,4 @@
-/* stonkpile.css v0.0.1
- * ====================
- * Minimal css framework
- * Project: https://github.com/stonkpile/css/
-*/
-
+/* qbank.css v0.0.1 */
 @import "variables";
 
 @import "base/index";
