Added some more components

--- a/scss/elements/_delete.scss
+++ b/scss/elements/_delete.scss
@@ -1,3 +1,10 @@
+/**
+ * A simple delete button
+ *
+ * Changelog
+ * 26/10/2020: Added initial component
+*/
+
 @mixin heightWidth ($size) {
   height: $size;
   width: $size;
