--- a/scss/elements/_icon.scss
+++ b/scss/elements/_icon.scss
@@ -1,3 +1,10 @@
+/**
+ * The icon element
+ *
+ * Changelog
+ * 26/10/2020: Added initial component
+*/
+
 $iconSizes: (
   'small': 1rem,
   'medium': 2rem,
