Restructured files a bit

--- a/docs/components/button/button.css
+++ b/docs/components/button/button.css
@@ -1,7 +1,7 @@
-.btn {
+.button {
   border-radius: 20px;
   font-size: 1.2rem;
-  color: white;
+  color: green;
   background: #016b6b;
   border: none;
   padding: 10px 20px;
