--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,11 @@
-/* stonkpile.css v0.0.1 */
-@import "variables";
+/**
+ * stonkpile.css v0.0.1
+*/
+@import "variables/index";
+@import "functions/index";
 
 @import "base/index";
+@import "helpers/index";
+@import "layout/index";
 @import "elements/index";
 @import "components/index";
-@import "utilities/index";
