--- a/scss/elements/_index.scss
+++ b/scss/elements/_index.scss
@@ -1,5 +1,8 @@
 @import 'audio';
 @import 'box';
 @import 'delete';
+@import 'hr';
 @import 'icon';
+@import 'image';
+@import 'table';
 @import 'tag';
