--- a/scss/elements/_tag.scss
+++ b/scss/elements/_tag.scss
@@ -1,14 +1,19 @@
-.tag:not(body) {
-    align-items: center;
-    background-color: #f5f5f5;
-    border-radius: 0.25rem;
-    color: #4a4a4a;
-    display: inline-flex;
-    font-size: 0.75rem;
-    height: 2rem;
-    justify-content: center;
-    line-height: 1.5;
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-    white-space: nowrap;
+.tags {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.tags .tag {
+  margin: 0 calc(var(--gap) / 2) var(--gap) 0;
+}
+
+.tag {
+  display: inline-block;
+  padding: 0.125rem 0.375rem;
+  font-size: 85%;
+  font-weight: 500;
+  border-radius: 0.25rem;
+  color: var(--dark);
+  background: var(--default);
 }
