--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,7 +1,5 @@
 .card {
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-direction: column;
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
@@ -10,6 +8,7 @@
   border: 1px solid #00000020;
   border-radius: 0.25rem;
   min-height: 100%;
+  overflow: hidden;
 
   &-header {
     padding: 0.75rem 1.25rem;
