--- a/scss/helpers/_flex.scss
+++ b/scss/helpers/_flex.scss
@@ -3,6 +3,18 @@
   display: flex;
 }
 
+.flex-grow-height {
+  flex: 1 0 auto;
+}
+
+.flex-grow-width {
+  flex: 0 1 auto;
+}
+
+.flex-grow {
+  flex: 1 1 auto;
+}
+
 .flex-important {
   display: -ms-flexbox !important;
   display: flex !important;
