--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,4 +1,8 @@
+
+@import 'app';
 @import 'columns';
 @import 'container';
 @import 'hero';
 @import 'section';
+@import 'sidebar';
+@import 'topbar';
