--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,5 +7,6 @@
 @import "base/index";
 @import "helpers/index";
 @import "layout/index";
+@import "forms/index";
 @import "elements/index";
 @import "components/index";
